# Socratic-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: API_REFERENCE.md  QUICKSTART.md
examples/: 01_basic_analysis.py  05_openclaw_integration.py  06_langchain_integration.py
src/socratic_analyzer/: __init__.py  async_client.py  client.py  exceptions.py  models.py
src/socratic_analyzer/analyzers/: base.py  complexity.py  imports.py  metrics.py  patterns.py  performance.py  smells.py  static.py
src/socratic_analyzer/integrations/langchain/: __init__.py  tool.py
src/socratic_analyzer/integrations/openclaw/: __init__.py  skill.py
src/socratic_analyzer/utils/: ast_parser.py  quality_scorer.py
tests/: conftest.py  test_analyzers.py  test_client.py  test_langchain_integration.py  test_models.py  test_openclaw_integration.py  test_patterns.py  test_performance.py  test_performance_benchmarks.py  test_quality_scorer.py  test_smells.py
